add：登录信息获取接口
